# netcdf-explorer

./: LICENSE  Makefile.in  README.md  autoconf_inc.m4  configure  configure.ac  explorer.bkl  explorer.cpp  explorer.vcxproj
src/: Makefile.am  Makefile.in  explorer.cpp
